src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-dwP0.25-dhF500-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]

post-map configures:
size: 312 × 500, bounds: 1272 × 712, states: []
size: 312 × 492, bounds: 1272 × 712, states: [Activated]
